--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,14 @@
     <string name="from">From:</string>
     <string name="enter_sender_name">Enter sender name</string>
     <string name="create_announcement">Create Announcement</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="admin">Admin</string>
+    <string name="member_type">Member Type</string>
+    <string name="name">Name</string>
+
+    <string-array name="member_types_array">
+        <item>Security</item>
+        <item>Medic</item>
+        <item>Fire</item>
+    </string-array>
 </resources>
